--- a/back-end/frank-garage-service/src/main/resources/application.properties
+++ b/back-end/frank-garage-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=FrankGarageDB
+# spring.data.mongodb.username=frank
+# spring.data.mongodb.password=FrankGarageDB
 
